# aspell-pipe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  aspell-pipe.cabal
src/Text/: Aspell.hs
